feat: initialize Lean 4 project and add QBF Rank 1 examples
- Update .gitignore to exclude Lean build artifacts and deps.
- Add complete Lean 4 project structure in 'lean/' including source, tests, and CI workflows.
- Add QBF Rank 1 verification examples and lemmas in 'examples/qbf-rank1/'.
- Add orchestrator prompt v4.

--- a/.gitignore
+++ b/.gitignore
@@ -200,9 +200,9 @@ profiles.clj
 # =============================================================================
 # Lean 4 (optional/future)
 # =============================================================================
-/build/
-/lake-packages/
-/.lake/
+build/
+lake-packages/
+.lake/
 *.olean
 *.ilean
 *.trace
